--- a/SoftwareEngIII_assignment2/pom.xml
+++ b/SoftwareEngIII_assignment2/pom.xml
@@ -8,5 +8,18 @@
     <artifactId>SoftwareEngIII_assignment2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+    </dependencies>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
 
 </project>
