--- a/SoftwareEngIII_assignment2/pom.xml
+++ b/SoftwareEngIII_assignment2/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+        </dependency>
     </dependencies>
 
     <properties>
