--- a/shippable.yml
+++ b/shippable.yml
@@ -3,6 +3,15 @@ language: java
 jdk:
   - openjdk8
 
-build:
-  ci:
-    - mvn clean install
+before_install:
+   - mvn clean install
+
+after_success:
+   - mvn test
+
+
+notifications:
+  email:
+      recipients:
+         - adrianforde4@gmail.com
+	 - a.forde23@nuigalway.ie
