--- a/shippable.yml
+++ b/shippable.yml
@@ -13,7 +13,7 @@ build:
   ci:
     # mvn install will create a `target` folder which will contain a jacoco.xml
     # jacoco.xml will be present at path `target/site/jacoco/`
-    - mvn clean test
+    - mvn clean install
 
     # copy this file to the `shippable/codecoverage` folder
     - cp target/site/jacoco/jacoco.xml shippable/codecoverage
