--- a/shippable.yml
+++ b/shippable.yml
@@ -11,9 +11,10 @@ after_success:
 
 build:
   ci:
+    - mkdir -p shippable/testresults
     # mvn install will create a `target` folder which will contain a jacoco.xml
     # jacoco.xml will be present at path `target/site/jacoco/`
-    - mvn clean install
+    - mvn clean installmvn
 
     # copy this file to the `shippable/codecoverage` folder
     - cp target/site/jacoco/jacoco.xml shippable/codecoverage
