Fixing issue in yaml file

--- a/shippable.yml
+++ b/shippable.yml
@@ -14,7 +14,7 @@ build:
     - mkdir -p shippable/testresults
     # mvn install will create a `target` folder which will contain a jacoco.xml
     # jacoco.xml will be present at path `target/site/jacoco/`
-    - mvn clean installmvn
+    - mvn clean install
 
     # copy this file to the `shippable/codecoverage` folder
     - cp target/site/jacoco/jacoco.xml shippable/codecoverage
